# cufflinks

./: .gitignore  AUTHORS  INSTALL.md  LICENSE  Makefile.am  README  README.md  _config.yml  about.md  autogen.sh  ax_bam.m4  ax_boost_filesystem.m4  ax_boost_serialization.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_check_eigen.m4  ax_check_zlib.m4  ax_openmp.m4  benchmarks.md  configure.ac  cuffcompare.md  cuffdiff.md  cufflinks.md  cuffmerge.md  cuffnorm.md  cuffquant.md  curr_cuff_version  docs.md  file_formats.md  getting-started.md  getting_started.md  help.md  how_it_works.md  igenome_table.html  igenome_table.py  index.html  index.md  install.md  make_bin.sh  manual.md  (+14 more)
_layouts/: post.html
_posts/: 2009-09-26-v0.7.0.md  2010-02-05-v0.8.0.md  2010-02-13-v0.8.1.md  2010-03-26-v0.8.2.md  2010-06-30-v0.8.3.md  2010-09-27-v0.9.0.md  2010-10-03-v0.9.1.md  2010-10-26-v0.9.2.md  2010-11-30-v0.9.3.md  2011-03-10-v0.99.0.md  2011-03-16-bias-correction-paper.md  2011-05-06-v1.0.1.md  2011-05-22-v1.0.2.md  2011-06-01-v1.0.3.md  2011-06-26-rabt-paper.md  2011-07-31-igenomes-released.md  2011-09-08-v1.1.0.md  2011-11-21-cummerBund-released.md  2011-11-23-v1.2.0.md  2012-01-02-v1.3.0.md  2012-03-12-protocol-paper.md  2012-05-04-v2.0.0.md  2012-06-15-v2.0.1.md  2012-07-08-v2.0.2.md  2012-12-11-cuffdiff2-paper.md  2013-04-10-v2.1.0.md  2013-04-11-new-google-group.md  2013-04-11-transdecoder.md  2013-04-11-v2.1.1.md  2014-03-25-v2.2.0.md  2014-05-05-v2.2.1.md  2014-12-10-cufflinks-github.md
assets/css/: main.min.css
assets/downloads/: index.html?C=D;O=D  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=D
assets/js/: scripts.min.js
assets/less/: main.less  page.less  tables.less  typography.less  variables.less
build-aux/: cufflinks.mk
cufflinks.xcodeproj/: cole.pbxuser  cole.perspectivev3  project.pbxproj
cuffnorm/: cuffnorm.1  main.cpp
doc/: CL_figure_scratch.doc  CL_supplement.tex  CL_versions.tex  Cartoons.pptx  cufflinks.bib
doc/html/: faq.html  gff.html  howitworks.html  igenomes.html  index.html  manual.html  site.tmproj  tutorial.html
doc/html/css/: style.css
doc/html/igenome/: igenome_table.py
doc/illustrator/: Fig 2 - Tuxedo Workflow.ai
external_tests/tiny_tests/2x75/: accepted_hits.sam  test_ref.fa
src/: GArgs.cpp  GArgs.h  GBase.cpp  GBase.h  GFaSeqGet.cpp  GFaSeqGet.h  GFastaFile.h  GFastaIndex.cpp  GFastaIndex.h  GHash.hh  GList.hh  GStr.cpp  GStr.h  GVec.hh  Makefile.am  abundances.cpp  abundances.h  assemble.cpp  assemble.h  biascorrection.cpp  biascorrection.h  bundles.cpp  bundles.h  clustering.cpp  clustering.h  codons.cpp  codons.h  common.cpp  common.h  compress_gtf.cpp  cuffcluster.cpp  cuffcompare.cpp  cuffdiff.cpp  cuffdiff_to_gct.py  cufflinks.cpp  cuffmerge  cuffmerge.py  cuffnorm.cpp  cuffquant.cpp  differential.cpp  (+45 more)
src/cufflinks.xcodeproj/: project.pbxproj
src/lemon/: bfs.h  bin_heap.h  bipartite_matching.h  bucket_heap.h  concept_check.h  error.h  fib_heap.h  maps.h  topology.h
src/lemon/bits/: alteration_notifier.h  array_map.h  base_extender.h  graph_extender.h  invalid.h  map_extender.h  traits.h  variant.h
src/lemon/concepts/: graph.h  graph_components.h  heap.h  maps.h  path.h
src/locfit/: adap.c  ar_funs.c  arith.c  band.c  c_args.c  c_plot.c  cmd.c  dens_haz.c  dens_odi.c  density.c  dist.c  ev_atree.c  ev_interp.c  ev_kdtre.c  ev_main.c  ev_trian.c  family.c  fitted.c  frend.c  lf_fitfun.c  lf_robust.c  lf_vari.c  lfd.c  lffuns.h  lfstruc.h  lfwin.h  linalg.c  local.h  locfit.c  m_eigen.c  m_jacob.c  m_max.c  makecmd.c  minmax.c  mutil.h  pcomp.c  preplot.c  random.c  readfile.c  scb.c  (+9 more)
tests/unit_tests/: test_abundances.cpp  test_main.cpp  test_scaffolds.cpp
trunk/: README  ax_boost_thread.m4  ax_check_eigen.m4  boost.m4  configure.ac  make_bin.sh  version.m4
trunk/cufflinks.xcodeproj/: cole.pbxuser  cole.perspectivev3
trunk/doc/: CL_main_text.doc  Paper Outline.doc
trunk/doc/algorithm/: algorithm.bib  algorithm.tex  homework.cls
trunk/doc/html/: gff.html  igenomes.html  site.tmproj  tutorial.html
trunk/doc/html/images/: ucsc-track.tiff
trunk/src/: GBase.cpp  GBase.h  GHash.hh  LICENSE  Makefile.am  abundances.cpp  abundances.h  assemble.cpp  assemble.h  bundles.cpp  clustering.h  common.h  cuffcluster.cpp  cuffdiff.cpp  cuffdiff_to_gct.py  cuffmerge  differential.cpp  differential.h  gff.h  gff_utils.cpp  graph_optimize.h  gtf_reads.cpp  gtf_tracking.h  hits.h  jensen_shannon.cpp  progressbar.h  rounding.h  sampling.cpp  scaffold_graph.cpp  scaffolds.h  tokenize.h  transitive_reduction.h  update_check.h
trunk/src/cufflinks.xcodeproj/: cole.pbxuser  cole.perspectivev3
trunk/src/lemon/: dfs.h  error.h  graph_adaptor.h  graph_utils.h  list_graph.h  math.h  smart_graph.h  tolerance.h
trunk/src/lemon/bits/: debug_map.h  default_map.h  graph_adaptor_extender.h  path_dump.h  utility.h  vector_map.h
trunk/src/lemon/concepts/: bpugraph.h  matrix_maps.h  ugraph.h
trunk/src/locfit/: arith.c  band.c  c_args.c  cmd.c  dens_int.c  density.c  design.h  ev_main.c  help.c  imatlb.h  lf_dercor.c  lfcons.h  lfstr.c  lfstruc.h  locfit.c  m_chol.c  m_jacob.c  m_max.c  math.c  minmax.c  nbhd.c  pout.c  preplot.c  scb_cons.c  solve.c  startlf.c  vari.hpp  wdiag.c  weight.c
trunk/tests/unit_tests/: test_main.cpp
